# multizone-app

./: .gitignore  README.md  app.py  example.rpp  pyproject.toml  requirements.txt
src/: app.py
src/arduino_gpio/: arduino_gpio.ino
src/assets/: styles.css
src/components/: audio_cue_handler.py  gpio_handler.py  multizone_grid.py
