[project]
name = "multizone-app"
version = "0.1.0"
description = "A Streamlit application featuring a multi-zone interactive grid with Arduino GPIO integration and REAPER audio cue handling."
authors = [{name = "Your Name", email = "youremail@example.com"}]
license = {text = "MIT"}
readme = "README.md"
keywords = ["streamlit", "arduino", "gpio", "reaper", "audio", "multizone", "gui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]
dependencies = [
    "streamlit>=1.28.0",
    "Pillow>=9.0.0",
    "pyserial>=3.5",
    "python-osc>=1.8.0",
    "requests>=2.28.0",
    "numpy>=1.24.0"
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/tproost/multizone-app"
Repository = "https://github.com/tproost/multizone-app.git"
Issues = "https://github.com/tproost/multizone-app/issues"
Documentation = "https://github.com/tproost/multizone-app#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["multizone_app*"]

[tool.black]
line-length = 120
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true